fix: попап z-index + add: api

--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -9,7 +9,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 4;
+  z-index: 100;
 }
 
 @media screen and (max-width: 583px){
