--- a/src/blocks/popup/__overlay/popup__overlay.css
+++ b/src/blocks/popup/__overlay/popup__overlay.css
@@ -4,6 +4,7 @@
   background-color: #000;
   opacity: .5;
   position: fixed;
+  z-index: 99;
   top: 0;
   left: 0;
 }
