--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,7 +2,6 @@
   width: 120px;
   height: 120px;
   border-radius: 60px;
-  z-index: 2;
   object-fit: cover;
 }
 
